--- a/src/main/resources/templates/layouts/listview/listofsubmodule.html
+++ b/src/main/resources/templates/layouts/listview/listofsubmodule.html
@@ -85,7 +85,7 @@
 																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
 																	<a
 																	th:href="@{/sub-module/delete/{id}(id=${subModule.subModuleCode})}"><em
-																		class="fa fa-times" style="color: red"> Remove</em></a></a>
+																		class="fa fa-times" style="color: red"> Remove</em></a>
 															</span></td>
 														</tr>
 
