--- a/src/main/resources/templates/layouts/listview/listofCompany.html
+++ b/src/main/resources/templates/layouts/listview/listofCompany.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -59,8 +66,8 @@
 															<td th:text="${iter.index}+1">1</td>
 															<td th:text="${company.compCode}">Garrett Winters</td>
 															<td th:text="${company.compName}">Garrett Winters</td>
-															
-															
+
+
 															<td th:if="${company.compType=='D'}">Dependent</td>
 															<td th:if="${company.compType=='I'}">Independent</td>
 
@@ -68,12 +75,14 @@
 
 
 															<td><span> <a
-																		th:href="@{/companydetail/edit/{id}(id=${company.compCode})}"><em
-																			class="fa fa-edit" style="color: blue;">
-																			Edit</em></a></span> <span> <a
-																		th:href="@{/companydetail/delete/{id}(id=${company.compCode})}">
+																	th:href="@{/companydetail/edit/{id}(id=${company.compCode})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
+																	<a
+																	th:href="@{/companydetail/delete/{id}(id=${company.compCode})}">
 																		<em class="fa fa-times" style="color: red">
-																			Remove</em></a></span></td>
+																			Remove</em>
+																</a>
+															</span></td>
 														</tr>
 
 
@@ -86,7 +95,8 @@
 
 										<div class="box-footer">
 
-											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 
 										</div>
 
@@ -101,25 +111,30 @@
 					</div>
 				</section>
 			</div>
+		</div>
+	</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
+
+	<div th:replace="fragments/footer :: footer">...</div>
 
 
-			<script>
-
-				function getBack() {
-					alert("hello")
-					location.href = "companyDetail.html";
-				}
-			</script>
-			<!--   <section class="content">
+	<script>
+		function getBack() {
+			alert("hello")
+			location.href = "companyDetail.html";
+		}
+	</script>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
