--- a/src/main/resources/templates/layouts/Master/rejectionIssue.html
+++ b/src/main/resources/templates/layouts/Master/rejectionIssue.html
@@ -61,46 +61,47 @@
 
 						<!-- Default box -->
 						<div class="box">
-<!-- form start -->
-											<form role="form" 
-							 method="POST">
-
-												<div class="box-header with-border text-right">
-
-													<button type="submit" id="submit" class="btn btn-primary btn-sm">
-														<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
-													</button>
-													<button type="reset" value="reset" class="btn btn-secondary btn-sm">
-														<i class="fa fa-refresh" aria-hidden="true"></i> Reset
-													</button>
-
-													<a th:href="@{/gateentry/list}" class="btn btn-success btn-sm">
-														<i class="fa fa-list" aria-hidden="true"></i> View All
-													</a>
+							<!-- form start -->
+							<form role="form" th:action="@{/rejectionissue/}" th:object="${RejectionIsssue}"
+								method="POST">
 
 
+								<div class="box-header with-border text-right">
 
+									<button type="submit" id="submit" class="btn btn-primary btn-sm">
+										<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+									</button>
+									<button type="reset" value="reset" class="btn btn-secondary btn-sm">
+										<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+									</button>
+
+									<a th:href="@{/rejectionissue/list}" class="btn btn-success btn-sm">
+										<i class="fa fa-list" aria-hidden="true"></i> View All
+									</a>
+
+
+
+								</div>
+
+
+
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+
+
+
+										<div class="col-md-12 shadow bg-white rounded" style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+
+												<input type="hidden" id="mess" name="mess" th:value="${message}">
+
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
 												</div>
+												<!-- /.box-header -->
 
-
-
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-
-
-
-									<div class="col-md-12 shadow bg-white rounded" style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-
-											<input type="hidden" id="mess" name="mess" th:value="${message}">
-
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											
 
 
 												<div class="box">
@@ -109,21 +110,27 @@
 
 
 														<div class="form-group col-md-4">
-															<label for="inputEmail4">IssueNo.</label> <input
-																type="text" class="form-control" id="inputEmail4"
-																placeholder="Gate Sr No">
+															<label for="inputEmail4">IssueNo.</label> <input type="text"
+																class="form-control" id="inputEmail4"
+																placeholder="IssueNo" th:field="*{IssNo}" readonly >
 														</div>
+
 														<div class="form-group col-md-4">
-															<label for="inputPassword4">Issue Date</label>
-															<input type="date" class="form-control" id="gateEntryDate" >
+															<label for="inputEmail4">IssueDate</label> <input
+																type="date" class="form-control" id="inputEmail4"
+																placeholder="IssueNo" th:field="*{issueDate}">
 														</div>
+
+
+
+
 
 
 
 														<div class="form-group col-md-4">
 															<label for="inputAddress">Requisition no.</label> <select
-																class="form-control" id="" title="entry type">
-																<option value="p">Purchased Item</option>
+																class="form-control" id="" th:field="*{requisitionMaster}" title="">
+																<option value="p">Purchased Item </option>
 																<option value="re">Returned Item</option>
 																<option value="pe">Petty Item</option>
 																<option value="w">Warranty</option>
@@ -133,26 +140,27 @@
 
 
 														<div class="form-group col-md-4">
-															<label class="form-label">Requisition Date</label> <select
-																class="form-control" id="" title="gst type">
-																
-															</select>
+															<label class="form-label">Requisition Date</label> <input type="date"
+																class="form-control" id="" title="gst type"  th:field="*{reqDate}"
+																>
+															
+															</input>
 														</div>
 
 
 
 														<div class="form-group col-md-4">
-															<label for="inputEmail4">MRN No.</label> <input
-																type="text" class="form-control" id="inputEmail4"
-																placeholder="MRN No">
+															<label for="inputEmail4"> MRN No.</label> <input type="text"
+																class="form-control" id="inputEmail4"
+																placeholder="MRN No"  >
 														</div>
 
 
 														<div class="form-group col-md-4">
-															<label class="form-label">MRN Date</label> <select
-																class="form-control" id="" title="Mrn">
-																
-															</select>
+															<label class="form-label">MRN Date</label> <input type="date"
+																class="form-control" id="" title="Mrn" >
+
+															</input>
 														</div>
 
 
@@ -172,9 +180,9 @@
 
 
 														<div class="form-group col-md-4">
-															<label for="inputPassword4">Date</label> <input
-																type="date" class="form-control"
-																placeholder="Supplier Name" title="supplier name">
+															<label for="inputPassword4">Date</label> <input type="date"
+																class="form-control" placeholder="Supplier Name"
+																title="supplier name">
 														</div>
 
 
@@ -189,170 +197,171 @@
 												<!-- box 2 -->
 
 
-										</div>
-										<!--end box-1-->
-										<!-- end box-2 -->
-
-
-
-
-
-
-
-										<!--detail box-->
-										<div class="box">
-
-											<h5>Issue Item  Details</h5>
-											<div class="box-body">
-
-
-												<div class="col-sm-12" style="text-align: right">
-
-													<a id="add_row" class="fa fa-plus" aria-hidden="true"
-														style="font-size: 24px; color: #001080"></a>&nbsp;&nbsp;&nbsp;
-													<a id='delete_row' class="fa fa-trash"
-														style="font-size: 24px; color: #399490fc"
-														aria-hidden="true"></a>
-												</div>
-
-
-												<input id="_cr" name="_cr" type="hidden" value="1">
-
-
-
-												<div class="table-responsive" style="margin-top: 40px">
-													<table id="example" aria-describedby="example"
-														class="table table-striped display">
-														<thead>
-															<tr>
-
-
-
-																<th scope="col" class="text-center"
-																	style="width: 90px;">Sr.No</th>
-																<th scope="col" class="text-center"
-																	style="width: 90px;">Item Code<span
-																		style="color: red">*</span></th>
-																<th scope="col" class="text-center"
-																	style="width: 90px;">Item Description</th>
-																<th scope="col" class="text-center"
-																	style="width: 10px;">UOM</th>
-																<th scope="col" class="text-center"
-																	style="width: 120px;">Qty. Issue</th>
-																<th scope="col" class="text-center"
-																	style="width: 120px;">Issue Rate</th>
-
-															</tr>
-														</thead>
-
-														<tbody>
-															<tr id="addr0">
-
-																<!--   po number  -->
-
-
-
-																</select></td>
-																<!-- po date  -->
-
-																<td><input type="text"
-																		class="form-control form-control-sm"
-																		id="orderIndentDatePo0" title="order date"
-																		name="gateEntryItemDetails[0].orderDate"
-																		readonly></td>
-
-																<!-- item code  -->
-
-																<td><select id="orderItemPo0"
-																		class="form-control form-control-sm select orderItemContainerPo0"
-																		required title="item"
-																		onchange="getOrderItemDetailForPo()"
-																		name="gateEntryItemDetails[0].item">
-																		<option value="">Select</option>
-																	</select></td>
-
-																<!-- item description  -->
-
-																<td><input type="text"
-																		class="form-control form-control-sm"
-																		id="orderItemCode0" title="item description"
-																		name="gateEntryItemDetails[0].itemDescription"
-																		readonly></td>
-
-																<!-- pending qty  -->
-
-																<td><input type="number" title="pending qty"
-																		class="form-control form-control-sm"
-																		name="gateEntryItemDetails[0].pendingQty"></td>
-
-																<!-- qty  -->
-
-																<td><input type="number" id="qtyOrder0"
-																		onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
-																		class="form-control form-control-sm"
-																		title="net qty"
-																		name="gateEntryItemDetails[0].netQty"
-																		step="0.25" value="0.00"></td>
-
-																<!-- uom  -->
-
-																<td><input type="text"
-																		class="form-control form-control-sm"
-																		id="orderItemuom0" title="status"
-																		name="gateEntryItemDetails[0].uom"></td>
-
-																<!-- incoming part sr no  -->
-
-																<td><input type="text"
-																		class="form-control form-control-sm" id=""
-																		title=""></td>
-
-
-																<!-- claim part   -->
-
-
-
-
-
-															</tr>
-															<tr id='addr1' />
-
-														</tbody>
-
-
-													</table>
-												</div>
-
-												<input type="hidden" id="hidden_field" th:value="${length}" />
 											</div>
-										</div>
-
-
-										<!--end detail box-->
-
+											<!--end box-1-->
+											<!-- end box-2 -->
 
 
 
-										</form>
-
-
-									</div>
-									<!-- /.box -->
-									<!--<div style="width: parent; text-align-last: right; margin: 8px">
-										<a th:href="@{/gateentry/list}">View All Gate-Entry</a>
-									</div>-->
-								</div>
 
 
 
-							</div>
+
+											<!--detail box-->
+											<div class="box">
+
+												<h5>Issue Item Details</h5>
+												<div class="box-body">
+
+
+													<div class="col-sm-12" style="text-align: right">
+
+														<a id="add_row" class="fa fa-plus" aria-hidden="true"
+															style="font-size: 24px; color: #001080"></a>&nbsp;&nbsp;&nbsp;
+														<a id='delete_row' class="fa fa-trash"
+															style="font-size: 24px; color: #399490fc"
+															aria-hidden="true"></a>
+													</div>
+
+
+													<input id="_cr" name="_cr" type="hidden" value="1">
+
+
+
+													<div class="table-responsive" style="margin-top: 40px">
+														<table id="example" aria-describedby="example"
+															class="table table-striped display">
+															<thead>
+																<tr>
+
+
+
+																	<th scope="col" class="text-center"
+																		style="width: 90px;">Sr.No</th>
+																	<th scope="col" class="text-center"
+																		style="width: 90px;">Item Code<span
+																			style="color: red">*</span></th>
+																	<th scope="col" class="text-center"
+																		style="width: 90px;">Item Description</th>
+																	<th scope="col" class="text-center"
+																		style="width: 10px;">UOM</th>
+																	<th scope="col" class="text-center"
+																		style="width: 120px;">Qty. Issue</th>
+																	<th scope="col" class="text-center"
+																		style="width: 120px;">Issue Rate</th>
+
+																</tr>
+															</thead>
+
+															<tbody>
+																<tr id="addr0">
+
+																	<!--   po number  -->
+
+
+
+																	</select></td>
+																	<!-- po date  -->
+
+																	<td><input type="text"
+																			class="form-control form-control-sm"
+																			id="orderIndentDatePo0" title="order date"
+																			name="gateEntryItemDetails[0].orderDate"
+																			readonly></td>
+
+																	<!-- item code  -->
+
+																	<td><select id="orderItemPo0"
+																			class="form-control form-control-sm select orderItemContainerPo0"
+																			required title="item"
+																			onchange="getOrderItemDetailForPo()"
+																			name="gateEntryItemDetails[0].item">
+																			<option value="">Select</option>
+																		</select></td>
+
+																	<!-- item description  -->
+
+																	<td><input type="text"
+																			class="form-control form-control-sm"
+																			id="orderItemCode0" title="item description"
+																			name="gateEntryItemDetails[0].itemDescription"
+																			readonly></td>
+
+																	<!-- pending qty  -->
+
+																	<td><input type="number" title="pending qty"
+																			class="form-control form-control-sm"
+																			name="gateEntryItemDetails[0].pendingQty">
+																	</td>
+
+																	<!-- qty  -->
+
+																	<td><input type="number" id="qtyOrder0"
+																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
+																			class="form-control form-control-sm"
+																			title="net qty"
+																			name="gateEntryItemDetails[0].netQty"
+																			step="0.25" value="0.00"></td>
+
+																	<!-- uom  -->
+
+																	<td><input type="text"
+																			class="form-control form-control-sm"
+																			id="orderItemuom0" title="status"
+																			name="gateEntryItemDetails[0].uom"></td>
+
+																	<!-- incoming part sr no  -->
+
+																	<td><input type="text"
+																			class="form-control form-control-sm" id=""
+																			title=""></td>
+
+
+																	<!-- claim part   -->
+
+
+
+
+
+																</tr>
+																<tr id='addr1' />
+
+															</tbody>
+
+
+														</table>
+													</div>
+
+													<input type="hidden" id="hidden_field" th:value="${length}" />
+												</div>
+											</div>
+
+
+											<!--end detail box-->
+
+
+
+
+							</form>
+
 
 						</div>
-
+						<!-- /.box -->
+						<!--<div style="width: parent; text-align-last: right; margin: 8px">
+										<a th:href="@{/gateentry/list}">View All Gate-Entry</a>
+									</div>-->
 			</div>
-			</section>
-			</section>
+
+
+
 		</div>
+
+	</div>
+
+	</div>
+	</section>
+	</section>
+	</div>
 
 	</div>
 	</div>
@@ -546,7 +555,7 @@
 										/* item description  */
 										+ "<td><input type='text'class='form-control form-control-sm'id='orderItemCode" + i + "' title='item description'name='gateEntryItemDetails[" + i + "].itemDescription'readonly></td>"
 
-										
+
 										/*  qty */
 										+ "<td><input type='number' id='qtyOrder" + i + "' class='form-control form-control-sm' title='net qty'name='gateEntryItemDetails[" + i + "].netQty' onchange=''(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)''  step='0.25' value='0.00'></td>"
 
